Potential fix for SVG pixelation on safari

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,5 +7,6 @@ section {
 }
 
 :root {
-    @apply overflow-x-hidden
+    @apply overflow-x-hidden;
+    transform: unset !important;
 }
